# edu

./: .env.example  .gitignore  HANDOFF_20260617.md  HANDOFF_20260618.md  HANDOFF_20260621_RENDER_SUPABASE.md  HANDOVER_2026-06-11_sprint11_done.md  HANDOVER_2026-06-11_sprint12_done.md  HANDOVER_2026-06-11_sprint13_done.md  HANDOVER_2026-06-11_sprint15_done.md  HANDOVER_2026-06-11_sprint16_done.md  HANDOVER_2026-06-11_sprint17-19_done.md  HANDOVER_2026-06-11_sprint20_done.md  HANDOVER_2026-06-11_sprint21_done.md  HANDOVER_2026-06-11_sprint22_done.md  HANDOVER_2026-06-11_sprint23_done.md  HANDOVER_2026-06-11_sprint24_done.md  HANDOVER_2026-06-11_sprint25_done.md  HANDOVER_2026-06-14_local-dev-ready.md  HANDOVER_2026-06-14_sprint10_done.md  HANDOVER_2026-06-14_sprint9_done.md  HANDOVER_2026-06-17_sprint26_done.md  HANDOVER_2026-06-17_sprint27_done.md  HANDOVER_2026-06-17_sprint28_done.md  HANDOVER_ai_tutor_curriculum.md  Makefile  README.md  TODO.md  docker-compose.prod.tls.yml  docker-compose.prod.yml  docker-compose.smoke.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/db-init/: 01-create-test-db.sql
backend/scripts/: migrate_uploads_to_s3.py  promote_admin.py  seed_embeddings.py
backend/tests/: conftest.py  test_admin_cohort_api.py  test_admin_comments_api.py  test_admin_curriculum_api.py  test_admin_curriculum_schemas.py  test_admin_enrollment_api.py  test_admin_notifications_api.py  test_admin_submissions_api.py  (+78 more)
(+277 files in other folders)
